<resources>
    <string name="app_name">TheMovie</string>
    <string name="txt_user_name">User name</string>
    <string name="txt_password">Password</string>
    <string name="txt_login">Login</string>
    <string name="txt_register">Don\'t have an account? <font color="#00CAFF">Create one.</font></string>
    <string name="txt_remember_me">Remember me</string>
    <string name="txt_kaiju">Kaiju</string>
    <string name="txt_release_date">March 16,2024</string>
    <string name="txt_description">In a world ravaged by colossal monsters known as Kaiju, humanity stands on the brink of extinction. As cities fall and hope fades, a new generation of heroes rises—piloting massive mechanical suits called Jaegers to fight back. With breathtaking battles, intense drama, and epic destruction, this Kaiju film delivers a thrilling ride where survival depends on strength, sacrifice, and unity.</string>
    <string name="txt_director">Duc pham</string>
    <string name="txt_welcome">Welcome.</string>
    <string name="txt_herroBanner">Millions of movies, TV shows and people to discover. Explore now.</string>
    <string name="txt_home">Home</string>
    <string name="txt_movies">Movies</string>
    <string name="txt_tv_shows">TV Shows</string>
    <string name="txt_search">Search</string>
    <string name="txt_free_to_watch">Free To Watch</string>
    <string name="txt_trending_movies">Trending Movies</string>
    <string name="txt_movie_name">Movie name</string>
    <string name="txt_vote_average">4.2</string>
    <string name="txt_year">1999</string>
    <string name="txt_day">Day</string>
    <string name="txt_week">Week</string>
    <string name="txt_popular_movies">Popular Movies</string>
    <string name="txt_all">all</string>
    <string name="txt_popular">Popular</string>
    <string name="txt_name">Task</string>
    <string name="txt_tv_ma">TV-MA</string>
    <string name="txt_runtime">2h</string>
    <string name="txt_slash">|</string>
    <string name="txt_vote_count">444</string>
    <string name="txt_favorite">Favorite</string>
    <string name="txt_lists">Lists</string>
    <string name="txt_watchlist">Watchlist</string>
    <string name="txt_rate">Rate</string>
    <string name="txt_overview">Overview</string>
    <string name="txt_overview_content">Dune is a classic 1965 science fiction novel by Frank Herbert, set in a distant feudal future where noble houses control planetary fiefs under a galactic Emperor. The story follows Paul Atreides, the young heir to a noble family, as they are tasked with ruling the desert planet Arrakis, the sole source of the valuable "spice" melange, a drug that extends life and enhances consciousness.</string>
    <string name="txt_about_movie">About movie</string>
    <string name="txt_status">Status</string>
    <string name="txt_released">Released</string>
    <string name="txt_original_language">Original language</string>
    <string name="txt_language">English</string>
    <string name="txt_budget">Budget</string>
    <string name="txt_budget_cost">1000000</string>
    <string name="txt_revenue">Revenue</string>
    <string name="txt_revenue_earning">1,000,000</string>
    <string name="txt_production_country">Production country</string>
    <string name="txt_italy">Italy</string>
    <string name="txt_production_company">Production company</string>
    <string name="txt_company">Metrovideo</string>
    <string name="txt_top_billed_cast">Top Billed Cast</string>
    <string name="txt_cast_name">Cow boy</string>
    <string name="txt_char_name">Duc Pham</string>
    <string name="txt_recomendations">Recomendations</string>
    <string name="txt_2000000">2000000</string>
    <string name="txt_watch_this_in_4k">Watch this in 4k</string>
    <string name="txt_keywords">Keywords</string>
    <string name="txt_about_tv_show">About TV Show</string>
    <string name="txt_creator">Creator</string>
    <string name="txt_network">Network</string>
    <string name="txt_type">Type</string>
    <string name="txt_number_of_seasons">Number of seasons</string>
    <string name="txt_number_of_episodes">Number of episodes</string>
    <string name="txt_tv_people">People</string>
    <string name="txt_known_for">Known for</string>
    <string name="txt_acting">Acting:</string>
    <string name="txt_gender">Gender</string>
    <string name="txt_female">Female</string>
    <string name="txt_birthday">Birthday</string>
    <string name="txt_place_of_birth">Place of Birth</string>
    <string name="txt_biography">Biography</string>
    <string name="txt_profiles">Profiles</string>
    <string name="txt_production">Production:</string>
    <string name="txt_crew">Crew:</string>
    <string name="txt_more">More</string>
    <string name="txt_0">0</string>
    <string name="txt_people">People</string>
    <string name="txt_search_for_a_movie_tv_show_person">Search for a movie, TV show, person...</string>
</resources>
